tests/paczka1/small_fuzzy/53302807.err
Error in line 5: AuPH5j6 S740 44,3
Error in line 8: A423 S858 67,5
Error in line 2: Cifbtco A423 58,9
